--- a/pruebacss.css
+++ b/pruebacss.css
@@ -48,7 +48,7 @@ body{
 }
 .Titulo{
     color: rgb(192, 221, 86);
-    padding: 200px 200px 0px 200px;
+    padding: 150px 200px 0px 200px;
     text-align: center;
     font-size: 25px;
     text-shadow: 3px 5px 5px black;
@@ -57,5 +57,33 @@ P{
     font-size: 18px;
     color: #fff3db;
     padding: 1;
-    
+}
+
+.boton nav{
+    display: flex;
+    justify-content: center;
+    padding: 150px;
+}
+.boton button {
+   background-color: rgb(21, 180, 127);
+    border: solid; 
+    border-radius: 10px;
+    font-size: 20px;
+    text-decoration: none;
+}
+.boton nav a{
+    color: black;
+    text-decoration: none;
+}
+.boton a:link{
+    color: blue;
+}
+.boton a:visited{
+    color: greenyellow;
+}
+.boton a:hover{
+    color: aquamarine;
+}
+.boton a:active{
+    color: rebeccapurple;
 }
