avanzamos con el disenio de testimonios

--- a/pruebacss.css
+++ b/pruebacss.css
@@ -135,3 +135,21 @@ nav a:active{
 footer{
     padding: 20px 20px;
 }
+.Testimonios{
+    border: solid;
+    border-radius: 5px;
+    width: 500px;
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0,0,0,0.6);
+    position: absolute;
+    left: 20px;
+
+}
+section{
+    padding: 100px;
+}
+section .Testimonios:hover{
+     box-shadow: 0 0.1rem 0.6rem rgba(255, 255, 255, 0.5);
+}
