--- a/pruebacss.css
+++ b/pruebacss.css
@@ -277,6 +277,7 @@ section .Testimonio2:hover{
 .Contactanos{
     text-align: center; 
     color: wheat;
+    padding: 100px 0 0 0;
 }
 .formulario{
     text-align: center;
@@ -291,10 +292,21 @@ section .Testimonio2:hover{
     border:solid;
     border-radius: 25px;
 }
+.formulario div label{
+    cursor: pointer;
+}
+
 .formulario button{
     border: solid;
     border-radius: 50px;
     padding: 5px 150px 5px 150px;
     margin: 20px;
+    background-color:  rgba(6, 246, 42, 0.3);
+    color: wheat;
 }
+.formulario button:hover{
+    color: gold;
+    cursor: pointer;
+}
+
 
